# metaData

./: .gitignore  CMakeLists.txt  README.md  Tika Log command  main.cpp  tika-config.xml  tikaNotes.txt  unique_keys.json
data/: Test.json
data/results/: master_keys.txt  unique_keys.json  unique_keys.txt
results/: unique_keys.txt
src/: custom.json  main.cpp
